--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI= mongodb+srv://hirenp123:hirenp123@cluster0.k47ek8w.mongodb.net/blogapp?retryWrites=true&w=majority
 BCRYPT_SALTS = 12;
-JWT_SECRET = accio_sept
+JWT_SECRET = blog-app
